--- a/index.html
+++ b/index.html
@@ -5,20 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>7 Weeks of Fonts</title>
     <link rel="stylesheet" href="reset.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="index.css" media="screen" title="no title" charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Unna" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600|Vollkorn" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arvo:700|Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:600i" rel="stylesheet">
+    <link rel="stylesheet" href="index.css" media="screen" title="no title">
+    <link rel="stylesheet" href="week-2.css" media="screen" title="no title">
+    <link rel="stylesheet" href="week-3.css" media="screen" title="no title">
+    <link rel="stylesheet" href="week-4.css" media="screen" title="no title">
   </head>
   <body>
-
-    <section>
-      <p class="fire">
-        When Fighting <span>FIRE</span> with <span>FIRE</span>
-      </p>
+    <section class="week-4">
+      <p class="line-1 wk4normal">I love deadlines.</p>
+      <p class='wk4normal'>I like the</p>
+      <p class="wk4italic">whooshing sound</p>
+      <p class="wk4normal">they make as they</p>
+      <p class="wk4italic">fly by</p>
+      <p class="wk4normal">― Douglas Adams</p>
     </section>
-    <section>
-      <p class="water">
-        <span>Remember the</span> <span> Fire Department</span> <span>usually uses</span> <span class="water-text">WATER</span>
-      </p>
+    <section class="week-3">
+      <p class="moderation-1">"Everything in</p>
+      <p class="moderation-2">moderation,</p>
+      <p class="moderation-3">including</p>
+      <p class="moderation-4">moderation."</p>
+      <p class="moderation-5">- Oscar Wilde</p>
+    </section>
+    <section class="week-2">
+      <p class="sub-text sub-text-top"> “Well I could do that, </p>
+      <p class="main-text main-text-1"> but I WON’T </p>
+      <p class="sub-text sub-text-middle"> because I’m not an animal, </p>
+      <p class="main-text main-text-2"> and I don’t</p>
+      <p class="sub-text sub-text-end"> hate myself.” —Steve </p>
+    </section>
+    <section class="week-1">
+      <section class="week-1-sub">
+        <p class="fire">
+          When Fighting <span>FIRE</span> with <span>FIRE</span>
+        </p>
+      </section>
+      <section class="week-1-sub">
+        <p class="water">
+          <span>Remember the</span> <span> Fire Department</span> <span>usually uses</span> <span class="water-text">WATER</span>
+        </p>
+      </section>
     </section>
   </body>
 </html>
